making election login success action configurable in the admin gui

--- a/avUi/global.less
+++ b/avUi/global.less
@@ -8,6 +8,11 @@ a:hover, a:active {
   border: 0;
 }
 
+.input-block {
+  width: 100%;
+  clear: both;
+}
+
 .item-block {
   display: block;
   width: 100%;
@@ -45,6 +50,30 @@ a:hover, a:active {
 .vert-align-top {
   vertical-align: top;
 }
+
+/* paddings */
+
+.padding-sm {
+  padding: 10px;
+}
+
+.padding-top-sm {
+  padding-top: 10px;
+}
+
+.padding-left-sm {
+  padding-left: 10px;
+}
+
+.padding-right-sm {
+  padding-left: 10px;
+}
+
+.padding-bottom-sm {
+  padding-bottom: 10px;
+}
+
+
 
 .btn-transparent {
   transition: all .4s ease;
