--- a/app.less
+++ b/app.less
@@ -78,6 +78,7 @@
 @import "avAdmin/admin-directives/elquestions/elquestions.less";
 @import "avAdmin/admin-directives/elcensus/elcensus.less";
 @import "avAdmin/admin-directives/elcensus-config/elcensus-config.less";
+@import "avAdmin/admin-directives/success-action/success-action.less";
 @import "avAdmin/admin-directives/import/import.less";
 @import "avAdmin/admin-directives/elbasic/elbasic.less";
 @import "avAdmin/admin-directives/account/account.less";
