--- a/app.less
+++ b/app.less
@@ -12,6 +12,7 @@
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.less";
+@import "avBooth/colored-accordion-screen-directive/colored-accordion-screen-directive.less";
 @import "avBooth/available-options-directive/available-options-directive.less";
 @import "avBooth/audit-ballot-screen-directive/audit-ballot-screen-directive.less";
 @import "avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less";
