showing colored-accordion within multi-question directive

--- a/avUi/global.less
+++ b/avUi/global.less
@@ -39,6 +39,26 @@ a:hover, a:active {
   color: @av-secondary;
 }
 
+.text-gray-darker {
+  color: @gray-darker;
+}
+
+.text-gray-dark {
+  color: @gray-dark;
+}
+
+.text-gray {
+  color: @gray;
+}
+
+.text-gray-light {
+  color: @gray-light;
+}
+
+.text-gray-lighter {
+  color: @gray-lighter;
+}
+
 .no-padding-left {
   padding-left: 0;
 }
@@ -65,15 +85,32 @@ a:hover, a:active {
   padding-left: 10px;
 }
 
+.padding-left-zero {
+  padding-left: 0;
+}
+
 .padding-right-sm {
   padding-left: 10px;
+}
+
+
+.padding-right-zero {
+  padding-left: 0;
 }
 
 .padding-bottom-sm {
   padding-bottom: 10px;
 }
 
+.no-lateral-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
 
+.no-lateral-margin {
+  margin-left: 0;
+  margin-right: 0;
+}
 
 .btn-transparent {
   transition: all .4s ease;
