colored-accordion: Adding tag support

--- a/avBooth/colored-accordion-options-directive/colored-accordion-options-directive.less
+++ b/avBooth/colored-accordion-options-directive/colored-accordion-options-directive.less
@@ -8,6 +8,11 @@
     border-radius: 3px;
   }
 
+  .opttag {
+    color: lighten(@brand-primary, 20%);
+  }
+
+
   [avb-accordion-option] {
     padding-left: 0 !important;
 
