--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
@@ -28,6 +28,23 @@
       background-color: #DEEEEC;
     }
 
+    .videoWrapper {
+      padding-top: 10px;
+      position: relative;
+      margin-top: 20px;
+      padding-bottom: 50%;
+      padding-top: 25px;
+      height: 0;
+
+      iframe, object, embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
     .img-wrapper {
       width: 100%;
       max-height: 200px;
