--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
@@ -5,7 +5,7 @@
       display: block;
       width: 100%;
       text-align: center;
-      font-size: 28px;
+      font-size: 18px;
       margin-top: 10px;
     }
 
@@ -90,7 +90,7 @@
   }
 }
 
-@media(max-width: @screen-sm-min) {
+@media(max-width: @screen-md-min) {
   [avb-pairwise-beta] {
     .pairs {
       .clickable {
