--- a/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
+++ b/avBooth/pairwise-beta-directive/pairwise-beta-directive.less
@@ -44,13 +44,12 @@
 
     .img-wrapper {
       width: 100%;
-      max-height: 56.25vw; /* 315/560 = .5625 */
+      max-height: 25vw;
       overflow: hidden;
 
       img {
         width: 100%;
         height: auto;
-        max-height: 56.25vw; /* 315/560 = .5625 */
       }
 
 
